@@ -2,7 +2,7 @@
 4 3302.000000 16.000000 3201.000000 particles/smoke1.par
 1 5774.977539 687.000000 2530.938477 particles/waterfall1.par
 4
-4842.988281 15.520445 2363.927490 5303.597656 198.023315 2532.387939 1.000000 0.000000 1
-5746.481445 675.702515 2510.920898 5803.473633 675.702515 2550.956055 12.400011 1.400000 0
 5664.850586 639.711304 2508.268311 5700.924805 659.106567 2537.192627 1.000000 0.000000 1
 5285.751465 276.228088 2443.254883 5779.530762 678.301880 2569.374023 15.700024 0.000000 1
+4842.988281 15.520445 2363.927490 5303.597656 198.023315 2532.387939 1.000000 0.000000 1
+5746.481445 675.702515 2510.920898 5803.473633 675.702515 2550.956055 12.400011 1.400000 0
