@@ -2,6 +2,7 @@
 |                Version 0.6                   |
 ================================================
 - Map reflexion is now enabled per square;
+- Fixed a bug on particles load that was duplicating the last;
 
 ================================================
 |               Version 0.5.1                  |
